2004-05-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler-alist)
	(tramp-file-name-for-operation): Add entry for `file-remote-p'.
	(tramp-handle-file-remote-p): New defun.
	(top): Remove setting of `file-remote-p'.  Don't set
	`inhibit-file-name-handlers' and `inhibit-file-name-operation'.

	* tramp-smb.el (tramp-smb-file-name-handler-alist): Add entry for
	`file-remote-p'.
	
2004-05-28  Kai Grossjohann  <kai.grossjohann@gmx.net>

	* tramp-smb.el (tramp-smb-open-connection): Use
	tramp-set-process-query-on-exit-flag compat function.

	* tramp.el (tramp-set-process-query-on-exit-flag): New compat function.
	(tramp-open-connection-multi, tramp-open-connection-su)
	(tramp-open-connection-rsh, tramp-open-connection-telnet)
	(tramp-do-copy-or-rename-file-out-of-band): Use it.
	(tramp-let-maybe): New macro, let-binds a variable only if it
	isn't obsolete.
	(tramp-check-ls-commands, tramp-handle-expand-file-name)
	(tramp-handle-file-truename): Use it.

2004-05-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Add `tramp-completion-file-name-handler' to
	`inhibit-file-name-handlers', and `file-local-copy' to
	`inhibit-file-name-operation'.  Needed for proper working of
	`file-remote-p'.

2004-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-out-of-band-prompt-regexp): Renamed to
	`tramp-process-alive-regexp', because its usage is widen.
	(tramp-actions-copy-out-of-band): Apply it.
	(tramp-actions-before-shell, tramp-multi-actions): Add
	`tramp-action-process-alive' action.
	(tramp-action-process-alive): New defun.
	(tramp-process-one-action, tramp-process-one-multi-action): Remove
	check for process status.  Will be performed by the respective
	action now.  Reported by Ted Stern <stern+tramp-devel@cray.com>.

2004-05-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-uu.el (tramp-uuencode-region): Padding characters aren't
	counted for (last) line.  Reported by Aaron Ucko
	<ucko@ncbi.nlm.nih.gov>.
