@@ -1,3 +1,10 @@
+2004-05-30  Kai Grossjohann  <kai.grossjohann@gmx.net>
+
+	* tramp.el (tramp-locked, tramp-locker): New variables for
+	implementing a global lock.
+	(tramp-sh-file-name-handler): Use them to implement the global
+	lock.
+
 2004-05-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-file-name-handler-alist)
